--- a/DormitoryForDelivery/DormitoryForDelivery/GoogleService-Info.plist
+++ b/DormitoryForDelivery/DormitoryForDelivery/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>778723616619-tbudic4g1mpn31orpq36f3bll8jd658s.apps.googleusercontent.com</string>
+	<string>778723616619-alvo48qql3v29h5amrt79k3rmlefl4nq.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.778723616619-tbudic4g1mpn31orpq36f3bll8jd658s</string>
+	<string>com.googleusercontent.apps.778723616619-alvo48qql3v29h5amrt79k3rmlefl4nq</string>
 	<key>API_KEY</key>
 	<string>AIzaSyB__wSkCxvAEMmMwuzFozMTZkhut5lTVgc</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,22 +13,24 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.codershigh.DormitoryForDelivery</string>
+	<string>com.codershigh.DormitoryForDelivery1</string>
 	<key>PROJECT_ID</key>
 	<string>dormitoryfordelivery</string>
 	<key>STORAGE_BUCKET</key>
 	<string>dormitoryfordelivery.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:778723616619:ios:2487e60cc4bd1920c20e2e</string>
+	<string>1:778723616619:ios:b8cbb838f3e60114c20e2e</string>
+	<key>DATABASE_URL</key>
+	<string>https://dormitoryfordelivery-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
