--- a/DormitoryForDelivery/DormitoryForDelivery/Info.plist
+++ b/DormitoryForDelivery/DormitoryForDelivery/Info.plist
@@ -51,6 +51,8 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<false/>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
