--- a/DormitoryForDelivery/DormitoryForDelivery/Info.plist
+++ b/DormitoryForDelivery/DormitoryForDelivery/Info.plist
@@ -66,5 +66,10 @@
 	</array>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
